parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> prop
Rule 1     prop -> MINUS prop
Rule 2     prop -> NEGATION boolean
Rule 3     prop -> boolean CONJUNCTION boolean
Rule 4     prop -> boolean DISJUNCTION boolean
Rule 5     prop -> prop CON prop
Rule 6     prop -> prop IN prop
Rule 7     prop -> prop PLUS prop
Rule 8     prop -> prop MINUS prop
Rule 9     prop -> prop MULTIPLY prop
Rule 10    prop -> prop DIVIDE prop
Rule 11    prop -> prop INTEGER_DIV prop
Rule 12    prop -> prop MOD prop
Rule 13    prop -> prop EXPONENT prop
Rule 14    prop -> prop LESS prop
Rule 15    prop -> prop LESS_EQUAL prop
Rule 16    prop -> prop GREATER prop
Rule 17    prop -> prop GREATER_EQUAL prop
Rule 18    prop -> prop EQUALS prop
Rule 19    prop -> prop NOT_EQUAL prop
Rule 20    prop -> LEFT_PARENTHESIS prop RIGHT_PARENTHESIS
Rule 21    prop -> prop index
Rule 22    index -> LEFT_BRACKET prop RIGHT_BRACKET
Rule 23    prop -> list
Rule 24    list -> LEFT_BRACKET expression RIGHT_BRACKET
Rule 25    list -> LEFT_BRACKET RIGHT_BRACKET
Rule 26    expression -> value COMMA expression
Rule 27    expression -> value
Rule 28    value -> prop
Rule 29    prop -> TUPLE_IND Number prop
Rule 30    prop -> LEFT_PARENTHESIS express RIGHT_PARENTHESIS
Rule 31    express -> element COMMA expression
Rule 32    express -> element COMMA
Rule 33    element -> prop
Rule 34    prop -> STRING
Rule 35    prop -> Number
Rule 36    Number -> REAL
Rule 37    Number -> INTEGER
Rule 38    prop -> boolean
Rule 39    boolean -> TRUE
Rule 40    boolean -> FALSE

Terminals, with rules where they appear

COMMA                : 26 31 32
CON                  : 5
CONJUNCTION          : 3
DISJUNCTION          : 4
DIVIDE               : 10
EQUALS               : 18
EXPONENT             : 13
FALSE                : 40
GREATER              : 16
GREATER_EQUAL        : 17
IN                   : 6
INTEGER              : 37
INTEGER_DIV          : 11
LEFT_BRACKET         : 22 24 25
LEFT_PARENTHESIS     : 20 30
LESS                 : 14
LESS_EQUAL           : 15
MINUS                : 1 8
MOD                  : 12
MULTIPLY             : 9
NEGATION             : 2
NOT_EQUAL            : 19
PLUS                 : 7
REAL                 : 36
RIGHT_BRACKET        : 22 24 25
RIGHT_PARENTHESIS    : 20 30
STRING               : 34
TRUE                 : 39
TUPLE_IND            : 29
error                : 

Nonterminals, with rules where they appear

Number               : 29 35
boolean              : 2 3 3 4 4 38
element              : 31 32
express              : 30
expression           : 24 26 31
index                : 21
list                 : 23
prop                 : 1 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 21 22 28 29 33 0
value                : 26 27

Parsing method: LALR

state 0

    (0) S' -> . prop
    (1) prop -> . MINUS prop
    (2) prop -> . NEGATION boolean
    (3) prop -> . boolean CONJUNCTION boolean
    (4) prop -> . boolean DISJUNCTION boolean
    (5) prop -> . prop CON prop
    (6) prop -> . prop IN prop
    (7) prop -> . prop PLUS prop
    (8) prop -> . prop MINUS prop
    (9) prop -> . prop MULTIPLY prop
    (10) prop -> . prop DIVIDE prop
    (11) prop -> . prop INTEGER_DIV prop
    (12) prop -> . prop MOD prop
    (13) prop -> . prop EXPONENT prop
    (14) prop -> . prop LESS prop
    (15) prop -> . prop LESS_EQUAL prop
    (16) prop -> . prop GREATER prop
    (17) prop -> . prop GREATER_EQUAL prop
    (18) prop -> . prop EQUALS prop
    (19) prop -> . prop NOT_EQUAL prop
    (20) prop -> . LEFT_PARENTHESIS prop RIGHT_PARENTHESIS
    (21) prop -> . prop index
    (23) prop -> . list
    (29) prop -> . TUPLE_IND Number prop
    (30) prop -> . LEFT_PARENTHESIS express RIGHT_PARENTHESIS
    (34) prop -> . STRING
    (35) prop -> . Number
    (38) prop -> . boolean
    (39) boolean -> . TRUE
    (40) boolean -> . FALSE
    (24) list -> . LEFT_BRACKET expression RIGHT_BRACKET
    (25) list -> . LEFT_BRACKET RIGHT_BRACKET
    (36) Number -> . REAL
    (37) Number -> . INTEGER

    MINUS           shift and go to state 2
    NEGATION        shift and go to state 3
    LEFT_PARENTHESIS shift and go to state 5
    TUPLE_IND       shift and go to state 7
    STRING          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11
    LEFT_BRACKET    shift and go to state 12
    REAL            shift and go to state 13
    INTEGER         shift and go to state 14

    prop                           shift and go to state 1
    boolean                        shift and go to state 4
    list                           shift and go to state 6
    Number                         shift and go to state 8

state 1

    (0) S' -> prop .
    (5) prop -> prop . CON prop
    (6) prop -> prop . IN prop
    (7) prop -> prop . PLUS prop
    (8) prop -> prop . MINUS prop
    (9) prop -> prop . MULTIPLY prop
    (10) prop -> prop . DIVIDE prop
    (11) prop -> prop . INTEGER_DIV prop
    (12) prop -> prop . MOD prop
    (13) prop -> prop . EXPONENT prop
    (14) prop -> prop . LESS prop
    (15) prop -> prop . LESS_EQUAL prop
    (16) prop -> prop . GREATER prop
    (17) prop -> prop . GREATER_EQUAL prop
    (18) prop -> prop . EQUALS prop
    (19) prop -> prop . NOT_EQUAL prop
    (21) prop -> prop . index
    (22) index -> . LEFT_BRACKET prop RIGHT_BRACKET

    CON             shift and go to state 15
    IN              shift and go to state 16
    PLUS            shift and go to state 17
    MINUS           shift and go to state 18
    MULTIPLY        shift and go to state 19
    DIVIDE          shift and go to state 20
    INTEGER_DIV     shift and go to state 21
    MOD             shift and go to state 22
    EXPONENT        shift and go to state 23
    LESS            shift and go to state 24
    LESS_EQUAL      shift and go to state 25
    GREATER         shift and go to state 26
    GREATER_EQUAL   shift and go to state 27
    EQUALS          shift and go to state 28
    NOT_EQUAL       shift and go to state 29
    LEFT_BRACKET    shift and go to state 31

    index                          shift and go to state 30

state 2

    (1) prop -> MINUS . prop
    (1) prop -> . MINUS prop
    (2) prop -> . NEGATION boolean
    (3) prop -> . boolean CONJUNCTION boolean
    (4) prop -> . boolean DISJUNCTION boolean
    (5) prop -> . prop CON prop
    (6) prop -> . prop IN prop
    (7) prop -> . prop PLUS prop
    (8) prop -> . prop MINUS prop
    (9) prop -> . prop MULTIPLY prop
    (10) prop -> . prop DIVIDE prop
    (11) prop -> . prop INTEGER_DIV prop
    (12) prop -> . prop MOD prop
    (13) prop -> . prop EXPONENT prop
    (14) prop -> . prop LESS prop
    (15) prop -> . prop LESS_EQUAL prop
    (16) prop -> . prop GREATER prop
    (17) prop -> . prop GREATER_EQUAL prop
    (18) prop -> . prop EQUALS prop
    (19) prop -> . prop NOT_EQUAL prop
    (20) prop -> . LEFT_PARENTHESIS prop RIGHT_PARENTHESIS
    (21) prop -> . prop index
    (23) prop -> . list
    (29) prop -> . TUPLE_IND Number prop
    (30) prop -> . LEFT_PARENTHESIS express RIGHT_PARENTHESIS
    (34) prop -> . STRING
    (35) prop -> . Number
    (38) prop -> . boolean
    (39) boolean -> . TRUE
    (40) boolean -> . FALSE
    (24) list -> . LEFT_BRACKET expression RIGHT_BRACKET
    (25) list -> . LEFT_BRACKET RIGHT_BRACKET
    (36) Number -> . REAL
    (37) Number -> . INTEGER

    MINUS           shift and go to state 2
    NEGATION        shift and go to state 3
    LEFT_PARENTHESIS shift and go to state 5
    TUPLE_IND       shift and go to state 7
    STRING          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11
    LEFT_BRACKET    shift and go to state 12
    REAL            shift and go to state 13
    INTEGER         shift and go to state 14

    prop                           shift and go to state 32
    boolean                        shift and go to state 4
    list                           shift and go to state 6
    Number                         shift and go to state 8

state 3

    (2) prop -> NEGATION . boolean
    (39) boolean -> . TRUE
    (40) boolean -> . FALSE

    TRUE            shift and go to state 10
    FALSE           shift and go to state 11

    boolean                        shift and go to state 33

state 4

    (3) prop -> boolean . CONJUNCTION boolean
    (4) prop -> boolean . DISJUNCTION boolean
    (38) prop -> boolean .

    CONJUNCTION     shift and go to state 34
    DISJUNCTION     shift and go to state 35
    CON             reduce using rule 38 (prop -> boolean .)
    IN              reduce using rule 38 (prop -> boolean .)
    PLUS            reduce using rule 38 (prop -> boolean .)
    MINUS           reduce using rule 38 (prop -> boolean .)
    MULTIPLY        reduce using rule 38 (prop -> boolean .)
    DIVIDE          reduce using rule 38 (prop -> boolean .)
    INTEGER_DIV     reduce using rule 38 (prop -> boolean .)
    MOD             reduce using rule 38 (prop -> boolean .)
    EXPONENT        reduce using rule 38 (prop -> boolean .)
    LESS            reduce using rule 38 (prop -> boolean .)
    LESS_EQUAL      reduce using rule 38 (prop -> boolean .)
    GREATER         reduce using rule 38 (prop -> boolean .)
    GREATER_EQUAL   reduce using rule 38 (prop -> boolean .)
    EQUALS          reduce using rule 38 (prop -> boolean .)
    NOT_EQUAL       reduce using rule 38 (prop -> boolean .)
    LEFT_BRACKET    reduce using rule 38 (prop -> boolean .)
    $end            reduce using rule 38 (prop -> boolean .)
    RIGHT_PARENTHESIS reduce using rule 38 (prop -> boolean .)
    COMMA           reduce using rule 38 (prop -> boolean .)
    RIGHT_BRACKET   reduce using rule 38 (prop -> boolean .)


state 5

    (20) prop -> LEFT_PARENTHESIS . prop RIGHT_PARENTHESIS
    (30) prop -> LEFT_PARENTHESIS . express RIGHT_PARENTHESIS
    (1) prop -> . MINUS prop
    (2) prop -> . NEGATION boolean
    (3) prop -> . boolean CONJUNCTION boolean
    (4) prop -> . boolean DISJUNCTION boolean
    (5) prop -> . prop CON prop
    (6) prop -> . prop IN prop
    (7) prop -> . prop PLUS prop
    (8) prop -> . prop MINUS prop
    (9) prop -> . prop MULTIPLY prop
    (10) prop -> . prop DIVIDE prop
    (11) prop -> . prop INTEGER_DIV prop
    (12) prop -> . prop MOD prop
    (13) prop -> . prop EXPONENT prop
    (14) prop -> . prop LESS prop
    (15) prop -> . prop LESS_EQUAL prop
    (16) prop -> . prop GREATER prop
    (17) prop -> . prop GREATER_EQUAL prop
    (18) prop -> . prop EQUALS prop
    (19) prop -> . prop NOT_EQUAL prop
    (20) prop -> . LEFT_PARENTHESIS prop RIGHT_PARENTHESIS
    (21) prop -> . prop index
    (23) prop -> . list
    (29) prop -> . TUPLE_IND Number prop
    (30) prop -> . LEFT_PARENTHESIS express RIGHT_PARENTHESIS
    (34) prop -> . STRING
    (35) prop -> . Number
    (38) prop -> . boolean
    (31) express -> . element COMMA expression
    (32) express -> . element COMMA
    (39) boolean -> . TRUE
    (40) boolean -> . FALSE
    (24) list -> . LEFT_BRACKET expression RIGHT_BRACKET
    (25) list -> . LEFT_BRACKET RIGHT_BRACKET
    (36) Number -> . REAL
    (37) Number -> . INTEGER
    (33) element -> . prop

    MINUS           shift and go to state 2
    NEGATION        shift and go to state 3
    LEFT_PARENTHESIS shift and go to state 5
    TUPLE_IND       shift and go to state 7
    STRING          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11
    LEFT_BRACKET    shift and go to state 12
    REAL            shift and go to state 13
    INTEGER         shift and go to state 14

    prop                           shift and go to state 36
    express                        shift and go to state 37
    boolean                        shift and go to state 4
    list                           shift and go to state 6
    Number                         shift and go to state 8
    element                        shift and go to state 38

state 6

    (23) prop -> list .

    CON             reduce using rule 23 (prop -> list .)
    IN              reduce using rule 23 (prop -> list .)
    PLUS            reduce using rule 23 (prop -> list .)
    MINUS           reduce using rule 23 (prop -> list .)
    MULTIPLY        reduce using rule 23 (prop -> list .)
    DIVIDE          reduce using rule 23 (prop -> list .)
    INTEGER_DIV     reduce using rule 23 (prop -> list .)
    MOD             reduce using rule 23 (prop -> list .)
    EXPONENT        reduce using rule 23 (prop -> list .)
    LESS            reduce using rule 23 (prop -> list .)
    LESS_EQUAL      reduce using rule 23 (prop -> list .)
    GREATER         reduce using rule 23 (prop -> list .)
    GREATER_EQUAL   reduce using rule 23 (prop -> list .)
    EQUALS          reduce using rule 23 (prop -> list .)
    NOT_EQUAL       reduce using rule 23 (prop -> list .)
    LEFT_BRACKET    reduce using rule 23 (prop -> list .)
    $end            reduce using rule 23 (prop -> list .)
    RIGHT_PARENTHESIS reduce using rule 23 (prop -> list .)
    COMMA           reduce using rule 23 (prop -> list .)
    RIGHT_BRACKET   reduce using rule 23 (prop -> list .)


state 7

    (29) prop -> TUPLE_IND . Number prop
    (36) Number -> . REAL
    (37) Number -> . INTEGER

    REAL            shift and go to state 13
    INTEGER         shift and go to state 14

    Number                         shift and go to state 39

state 8

    (35) prop -> Number .

    CON             reduce using rule 35 (prop -> Number .)
    IN              reduce using rule 35 (prop -> Number .)
    PLUS            reduce using rule 35 (prop -> Number .)
    MINUS           reduce using rule 35 (prop -> Number .)
    MULTIPLY        reduce using rule 35 (prop -> Number .)
    DIVIDE          reduce using rule 35 (prop -> Number .)
    INTEGER_DIV     reduce using rule 35 (prop -> Number .)
    MOD             reduce using rule 35 (prop -> Number .)
    EXPONENT        reduce using rule 35 (prop -> Number .)
    LESS            reduce using rule 35 (prop -> Number .)
    LESS_EQUAL      reduce using rule 35 (prop -> Number .)
    GREATER         reduce using rule 35 (prop -> Number .)
    GREATER_EQUAL   reduce using rule 35 (prop -> Number .)
    EQUALS          reduce using rule 35 (prop -> Number .)
    NOT_EQUAL       reduce using rule 35 (prop -> Number .)
    LEFT_BRACKET    reduce using rule 35 (prop -> Number .)
    $end            reduce using rule 35 (prop -> Number .)
    RIGHT_PARENTHESIS reduce using rule 35 (prop -> Number .)
    COMMA           reduce using rule 35 (prop -> Number .)
    RIGHT_BRACKET   reduce using rule 35 (prop -> Number .)


state 9

    (34) prop -> STRING .

    CON             reduce using rule 34 (prop -> STRING .)
    IN              reduce using rule 34 (prop -> STRING .)
    PLUS            reduce using rule 34 (prop -> STRING .)
    MINUS           reduce using rule 34 (prop -> STRING .)
    MULTIPLY        reduce using rule 34 (prop -> STRING .)
    DIVIDE          reduce using rule 34 (prop -> STRING .)
    INTEGER_DIV     reduce using rule 34 (prop -> STRING .)
    MOD             reduce using rule 34 (prop -> STRING .)
    EXPONENT        reduce using rule 34 (prop -> STRING .)
    LESS            reduce using rule 34 (prop -> STRING .)
    LESS_EQUAL      reduce using rule 34 (prop -> STRING .)
    GREATER         reduce using rule 34 (prop -> STRING .)
    GREATER_EQUAL   reduce using rule 34 (prop -> STRING .)
    EQUALS          reduce using rule 34 (prop -> STRING .)
    NOT_EQUAL       reduce using rule 34 (prop -> STRING .)
    LEFT_BRACKET    reduce using rule 34 (prop -> STRING .)
    $end            reduce using rule 34 (prop -> STRING .)
    RIGHT_PARENTHESIS reduce using rule 34 (prop -> STRING .)
    COMMA           reduce using rule 34 (prop -> STRING .)
    RIGHT_BRACKET   reduce using rule 34 (prop -> STRING .)


state 10

    (39) boolean -> TRUE .

    CONJUNCTION     reduce using rule 39 (boolean -> TRUE .)
    DISJUNCTION     reduce using rule 39 (boolean -> TRUE .)
    CON             reduce using rule 39 (boolean -> TRUE .)
    IN              reduce using rule 39 (boolean -> TRUE .)
    PLUS            reduce using rule 39 (boolean -> TRUE .)
    MINUS           reduce using rule 39 (boolean -> TRUE .)
    MULTIPLY        reduce using rule 39 (boolean -> TRUE .)
    DIVIDE          reduce using rule 39 (boolean -> TRUE .)
    INTEGER_DIV     reduce using rule 39 (boolean -> TRUE .)
    MOD             reduce using rule 39 (boolean -> TRUE .)
    EXPONENT        reduce using rule 39 (boolean -> TRUE .)
    LESS            reduce using rule 39 (boolean -> TRUE .)
    LESS_EQUAL      reduce using rule 39 (boolean -> TRUE .)
    GREATER         reduce using rule 39 (boolean -> TRUE .)
    GREATER_EQUAL   reduce using rule 39 (boolean -> TRUE .)
    EQUALS          reduce using rule 39 (boolean -> TRUE .)
    NOT_EQUAL       reduce using rule 39 (boolean -> TRUE .)
    LEFT_BRACKET    reduce using rule 39 (boolean -> TRUE .)
    $end            reduce using rule 39 (boolean -> TRUE .)
    RIGHT_PARENTHESIS reduce using rule 39 (boolean -> TRUE .)
    COMMA           reduce using rule 39 (boolean -> TRUE .)
    RIGHT_BRACKET   reduce using rule 39 (boolean -> TRUE .)


state 11

    (40) boolean -> FALSE .

    CONJUNCTION     reduce using rule 40 (boolean -> FALSE .)
    DISJUNCTION     reduce using rule 40 (boolean -> FALSE .)
    CON             reduce using rule 40 (boolean -> FALSE .)
    IN              reduce using rule 40 (boolean -> FALSE .)
    PLUS            reduce using rule 40 (boolean -> FALSE .)
    MINUS           reduce using rule 40 (boolean -> FALSE .)
    MULTIPLY        reduce using rule 40 (boolean -> FALSE .)
    DIVIDE          reduce using rule 40 (boolean -> FALSE .)
    INTEGER_DIV     reduce using rule 40 (boolean -> FALSE .)
    MOD             reduce using rule 40 (boolean -> FALSE .)
    EXPONENT        reduce using rule 40 (boolean -> FALSE .)
    LESS            reduce using rule 40 (boolean -> FALSE .)
    LESS_EQUAL      reduce using rule 40 (boolean -> FALSE .)
    GREATER         reduce using rule 40 (boolean -> FALSE .)
    GREATER_EQUAL   reduce using rule 40 (boolean -> FALSE .)
    EQUALS          reduce using rule 40 (boolean -> FALSE .)
    NOT_EQUAL       reduce using rule 40 (boolean -> FALSE .)
    LEFT_BRACKET    reduce using rule 40 (boolean -> FALSE .)
    $end            reduce using rule 40 (boolean -> FALSE .)
    RIGHT_PARENTHESIS reduce using rule 40 (boolean -> FALSE .)
    COMMA           reduce using rule 40 (boolean -> FALSE .)
    RIGHT_BRACKET   reduce using rule 40 (boolean -> FALSE .)


state 12

    (24) list -> LEFT_BRACKET . expression RIGHT_BRACKET
    (25) list -> LEFT_BRACKET . RIGHT_BRACKET
    (26) expression -> . value COMMA expression
    (27) expression -> . value
    (28) value -> . prop
    (1) prop -> . MINUS prop
    (2) prop -> . NEGATION boolean
    (3) prop -> . boolean CONJUNCTION boolean
    (4) prop -> . boolean DISJUNCTION boolean
    (5) prop -> . prop CON prop
    (6) prop -> . prop IN prop
    (7) prop -> . prop PLUS prop
    (8) prop -> . prop MINUS prop
    (9) prop -> . prop MULTIPLY prop
    (10) prop -> . prop DIVIDE prop
    (11) prop -> . prop INTEGER_DIV prop
    (12) prop -> . prop MOD prop
    (13) prop -> . prop EXPONENT prop
    (14) prop -> . prop LESS prop
    (15) prop -> . prop LESS_EQUAL prop
    (16) prop -> . prop GREATER prop
    (17) prop -> . prop GREATER_EQUAL prop
    (18) prop -> . prop EQUALS prop
    (19) prop -> . prop NOT_EQUAL prop
    (20) prop -> . LEFT_PARENTHESIS prop RIGHT_PARENTHESIS
    (21) prop -> . prop index
    (23) prop -> . list
    (29) prop -> . TUPLE_IND Number prop
    (30) prop -> . LEFT_PARENTHESIS express RIGHT_PARENTHESIS
    (34) prop -> . STRING
    (35) prop -> . Number
    (38) prop -> . boolean
    (39) boolean -> . TRUE
    (40) boolean -> . FALSE
    (24) list -> . LEFT_BRACKET expression RIGHT_BRACKET
    (25) list -> . LEFT_BRACKET RIGHT_BRACKET
    (36) Number -> . REAL
    (37) Number -> . INTEGER

    RIGHT_BRACKET   shift and go to state 41
    MINUS           shift and go to state 2
    NEGATION        shift and go to state 3
    LEFT_PARENTHESIS shift and go to state 5
    TUPLE_IND       shift and go to state 7
    STRING          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11
    LEFT_BRACKET    shift and go to state 12
    REAL            shift and go to state 13
    INTEGER         shift and go to state 14

    expression                     shift and go to state 40
    value                          shift and go to state 42
    prop                           shift and go to state 43
    boolean                        shift and go to state 4
    list                           shift and go to state 6
    Number                         shift and go to state 8

state 13

    (36) Number -> REAL .

    CON             reduce using rule 36 (Number -> REAL .)
    IN              reduce using rule 36 (Number -> REAL .)
    PLUS            reduce using rule 36 (Number -> REAL .)
    MINUS           reduce using rule 36 (Number -> REAL .)
    MULTIPLY        reduce using rule 36 (Number -> REAL .)
    DIVIDE          reduce using rule 36 (Number -> REAL .)
    INTEGER_DIV     reduce using rule 36 (Number -> REAL .)
    MOD             reduce using rule 36 (Number -> REAL .)
    EXPONENT        reduce using rule 36 (Number -> REAL .)
    LESS            reduce using rule 36 (Number -> REAL .)
    LESS_EQUAL      reduce using rule 36 (Number -> REAL .)
    GREATER         reduce using rule 36 (Number -> REAL .)
    GREATER_EQUAL   reduce using rule 36 (Number -> REAL .)
    EQUALS          reduce using rule 36 (Number -> REAL .)
    NOT_EQUAL       reduce using rule 36 (Number -> REAL .)
    LEFT_BRACKET    reduce using rule 36 (Number -> REAL .)
    $end            reduce using rule 36 (Number -> REAL .)
    RIGHT_PARENTHESIS reduce using rule 36 (Number -> REAL .)
    COMMA           reduce using rule 36 (Number -> REAL .)
    RIGHT_BRACKET   reduce using rule 36 (Number -> REAL .)
    NEGATION        reduce using rule 36 (Number -> REAL .)
    LEFT_PARENTHESIS reduce using rule 36 (Number -> REAL .)
    TUPLE_IND       reduce using rule 36 (Number -> REAL .)
    STRING          reduce using rule 36 (Number -> REAL .)
    TRUE            reduce using rule 36 (Number -> REAL .)
    FALSE           reduce using rule 36 (Number -> REAL .)
    REAL            reduce using rule 36 (Number -> REAL .)
    INTEGER         reduce using rule 36 (Number -> REAL .)


state 14

    (37) Number -> INTEGER .

    CON             reduce using rule 37 (Number -> INTEGER .)
    IN              reduce using rule 37 (Number -> INTEGER .)
    PLUS            reduce using rule 37 (Number -> INTEGER .)
    MINUS           reduce using rule 37 (Number -> INTEGER .)
    MULTIPLY        reduce using rule 37 (Number -> INTEGER .)
    DIVIDE          reduce using rule 37 (Number -> INTEGER .)
    INTEGER_DIV     reduce using rule 37 (Number -> INTEGER .)
    MOD             reduce using rule 37 (Number -> INTEGER .)
    EXPONENT        reduce using rule 37 (Number -> INTEGER .)
    LESS            reduce using rule 37 (Number -> INTEGER .)
    LESS_EQUAL      reduce using rule 37 (Number -> INTEGER .)
    GREATER         reduce using rule 37 (Number -> INTEGER .)
    GREATER_EQUAL   reduce using rule 37 (Number -> INTEGER .)
    EQUALS          reduce using rule 37 (Number -> INTEGER .)
    NOT_EQUAL       reduce using rule 37 (Number -> INTEGER .)
    LEFT_BRACKET    reduce using rule 37 (Number -> INTEGER .)
    $end            reduce using rule 37 (Number -> INTEGER .)
    RIGHT_PARENTHESIS reduce using rule 37 (Number -> INTEGER .)
    COMMA           reduce using rule 37 (Number -> INTEGER .)
    RIGHT_BRACKET   reduce using rule 37 (Number -> INTEGER .)
    NEGATION        reduce using rule 37 (Number -> INTEGER .)
    LEFT_PARENTHESIS reduce using rule 37 (Number -> INTEGER .)
    TUPLE_IND       reduce using rule 37 (Number -> INTEGER .)
    STRING          reduce using rule 37 (Number -> INTEGER .)
    TRUE            reduce using rule 37 (Number -> INTEGER .)
    FALSE           reduce using rule 37 (Number -> INTEGER .)
    REAL            reduce using rule 37 (Number -> INTEGER .)
    INTEGER         reduce using rule 37 (Number -> INTEGER .)


state 15

    (5) prop -> prop CON . prop
    (1) prop -> . MINUS prop
    (2) prop -> . NEGATION boolean
    (3) prop -> . boolean CONJUNCTION boolean
    (4) prop -> . boolean DISJUNCTION boolean
    (5) prop -> . prop CON prop
    (6) prop -> . prop IN prop
    (7) prop -> . prop PLUS prop
    (8) prop -> . prop MINUS prop
    (9) prop -> . prop MULTIPLY prop
    (10) prop -> . prop DIVIDE prop
    (11) prop -> . prop INTEGER_DIV prop
    (12) prop -> . prop MOD prop
    (13) prop -> . prop EXPONENT prop
    (14) prop -> . prop LESS prop
    (15) prop -> . prop LESS_EQUAL prop
    (16) prop -> . prop GREATER prop
    (17) prop -> . prop GREATER_EQUAL prop
    (18) prop -> . prop EQUALS prop
    (19) prop -> . prop NOT_EQUAL prop
    (20) prop -> . LEFT_PARENTHESIS prop RIGHT_PARENTHESIS
    (21) prop -> . prop index
    (23) prop -> . list
    (29) prop -> . TUPLE_IND Number prop
    (30) prop -> . LEFT_PARENTHESIS express RIGHT_PARENTHESIS
    (34) prop -> . STRING
    (35) prop -> . Number
    (38) prop -> . boolean
    (39) boolean -> . TRUE
    (40) boolean -> . FALSE
    (24) list -> . LEFT_BRACKET expression RIGHT_BRACKET
    (25) list -> . LEFT_BRACKET RIGHT_BRACKET
    (36) Number -> . REAL
    (37) Number -> . INTEGER

    MINUS           shift and go to state 2
    NEGATION        shift and go to state 3
    LEFT_PARENTHESIS shift and go to state 5
    TUPLE_IND       shift and go to state 7
    STRING          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11
    LEFT_BRACKET    shift and go to state 12
    REAL            shift and go to state 13
    INTEGER         shift and go to state 14

    prop                           shift and go to state 44
    boolean                        shift and go to state 4
    list                           shift and go to state 6
    Number                         shift and go to state 8

state 16

    (6) prop -> prop IN . prop
    (1) prop -> . MINUS prop
    (2) prop -> . NEGATION boolean
    (3) prop -> . boolean CONJUNCTION boolean
    (4) prop -> . boolean DISJUNCTION boolean
    (5) prop -> . prop CON prop
    (6) prop -> . prop IN prop
    (7) prop -> . prop PLUS prop
    (8) prop -> . prop MINUS prop
    (9) prop -> . prop MULTIPLY prop
    (10) prop -> . prop DIVIDE prop
    (11) prop -> . prop INTEGER_DIV prop
    (12) prop -> . prop MOD prop
    (13) prop -> . prop EXPONENT prop
    (14) prop -> . prop LESS prop
    (15) prop -> . prop LESS_EQUAL prop
    (16) prop -> . prop GREATER prop
    (17) prop -> . prop GREATER_EQUAL prop
    (18) prop -> . prop EQUALS prop
    (19) prop -> . prop NOT_EQUAL prop
    (20) prop -> . LEFT_PARENTHESIS prop RIGHT_PARENTHESIS
    (21) prop -> . prop index
    (23) prop -> . list
    (29) prop -> . TUPLE_IND Number prop
    (30) prop -> . LEFT_PARENTHESIS express RIGHT_PARENTHESIS
    (34) prop -> . STRING
    (35) prop -> . Number
    (38) prop -> . boolean
    (39) boolean -> . TRUE
    (40) boolean -> . FALSE
    (24) list -> . LEFT_BRACKET expression RIGHT_BRACKET
    (25) list -> . LEFT_BRACKET RIGHT_BRACKET
    (36) Number -> . REAL
    (37) Number -> . INTEGER

    MINUS           shift and go to state 2
    NEGATION        shift and go to state 3
    LEFT_PARENTHESIS shift and go to state 5
    TUPLE_IND       shift and go to state 7
    STRING          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11
    LEFT_BRACKET    shift and go to state 12
    REAL            shift and go to state 13
    INTEGER         shift and go to state 14

    prop                           shift and go to state 45
    boolean                        shift and go to state 4
    list                           shift and go to state 6
    Number                         shift and go to state 8

state 17

    (7) prop -> prop PLUS . prop
    (1) prop -> . MINUS prop
    (2) prop -> . NEGATION boolean
    (3) prop -> . boolean CONJUNCTION boolean
    (4) prop -> . boolean DISJUNCTION boolean
    (5) prop -> . prop CON prop
    (6) prop -> . prop IN prop
    (7) prop -> . prop PLUS prop
    (8) prop -> . prop MINUS prop
    (9) prop -> . prop MULTIPLY prop
    (10) prop -> . prop DIVIDE prop
    (11) prop -> . prop INTEGER_DIV prop
    (12) prop -> . prop MOD prop
    (13) prop -> . prop EXPONENT prop
    (14) prop -> . prop LESS prop
    (15) prop -> . prop LESS_EQUAL prop
    (16) prop -> . prop GREATER prop
    (17) prop -> . prop GREATER_EQUAL prop
    (18) prop -> . prop EQUALS prop
    (19) prop -> . prop NOT_EQUAL prop
    (20) prop -> . LEFT_PARENTHESIS prop RIGHT_PARENTHESIS
    (21) prop -> . prop index
    (23) prop -> . list
    (29) prop -> . TUPLE_IND Number prop
    (30) prop -> . LEFT_PARENTHESIS express RIGHT_PARENTHESIS
    (34) prop -> . STRING
    (35) prop -> . Number
    (38) prop -> . boolean
    (39) boolean -> . TRUE
    (40) boolean -> . FALSE
    (24) list -> . LEFT_BRACKET expression RIGHT_BRACKET
    (25) list -> . LEFT_BRACKET RIGHT_BRACKET
    (36) Number -> . REAL
    (37) Number -> . INTEGER

    MINUS           shift and go to state 2
    NEGATION        shift and go to state 3
    LEFT_PARENTHESIS shift and go to state 5
    TUPLE_IND       shift and go to state 7
    STRING          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11
    LEFT_BRACKET    shift and go to state 12
    REAL            shift and go to state 13
    INTEGER         shift and go to state 14

    prop                           shift and go to state 46
    boolean                        shift and go to state 4
    list                           shift and go to state 6
    Number                         shift and go to state 8

state 18
